# don_framework

./: .gitignore  Cargo.toml  README.md  rustc-ice-2026-07-04T05_42_35-24034.txt  rustc-ice-2026-07-04T05_42_35-24035.txt  rustc-ice-2026-07-04T05_43_34-24318.txt  rustc-ice-2026-07-04T05_43_34-24319.txt  test_image.txt
don_core/: Cargo.toml
don_core/src/: auth.rs  guard.rs  lib.rs  relations.rs  server.rs  traits.rs  upload.rs  websocket.rs
don_macros/: Cargo.toml
don_macros/src/: lib.rs
example_app/: Cargo.toml
example_app/migrations/: 20260623081841_final_users_table.sql  20260623083229_create_products.sql  20260627044649_final_jsonb_tables.sql  20260705065608_all_relations_tables.sql  20260706045538_rbac_tables.sql  20260717051900_flexible_auth_table.sql
example_app/src/: main.rs
