# don_core/Cargo.toml

[package]
name = "don_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework 
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls","any"] }

# Security
argon2 = "0.5"
jsonwebtoken = "9.2"
chrono = "0.4"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logs and Environment
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"