[package]
name = "don_core"
version = "0.2.1"
edition = "2021"
description = "Core engine for the Don Web Framework" 
license = "MIT"                                      

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "any"] }
argon2 = "0.5"
jsonwebtoken = "9.2"
chrono = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"


don_macros = { path = "../don_macros", version = "0.2.0" }