# don_core/Cargo.toml

[package]
name = "don_core"
version = "0.2.6"
edition = "2021"
description = "Core engine for the Don Web Framework"
license = "MIT"

[dependencies]
# THE FIX: Added "ws" feature here!
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "any"] }

argon2 = "0.5"
jsonwebtoken = "9.2"
chrono = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"

uuid = { version = "1.8", features = ["v4"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

don_macros = { path = "../don_macros", version = "0.2.6" }