[package]
name = "don_macros"
version = "0.1.0"
edition = "2021"
description = "Macros for the Don Web Framework"  # <-- Yahan aayega!
license = "MIT"                                   # <-- Yahan aayega!

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"