# example_app/Cargo.toml
[package]
name = "example_app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
dotenvy = "0.15"

don_core = { path = "../don_core" }
don_macros = { path = "../don_macros" }